--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
+<!-- Created By Sidhant -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
